[package]
authors = [
  "Scott Lembcke <slembcke@gmail.com>",
  "Scott Bennett <scottbennett912@gmail.com>",
]
categories = ["physics", "api-bindings", "game-engines"]
description = "Chipmunk Physics bindings for Rust"
keywords = ["chipmunk", "physics", "api", "engine"]
license = "MIT"
name = "chipmunk"
repository = "https://github.com/nullcatalyst/chipmunk-rs"
version = "0.1.0"

[dependencies]
chipmunk-sys = {path = "chipmunk-sys", version = "^0.1.0"}

[features]
default = ["use-vcpkg"]
static-link = ["chipmunk-sys/static-link"]
use-bindgen = ["chipmunk-sys/use-bindgen"]
use-vcpkg = ["chipmunk-sys/use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["chipmunk"]
git = "https://github.com/nullcatalyst/vcpkg"
rev = "2c340e3255154ca20276b8636964d11b865f0cbf"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = {triplet = "x64-windows-static-md"}
