[package]
authors = [
  "Scott Lembcke <slembcke@gmail.com>",
  "Scott Bennett <scottbennett912@gmail.com>",
]
categories = ["physics", "api-bindings", "game-engines"]
description = "Chipmunk Physics bindings for Rust"
keywords = ["chipmunk", "physics", "api", "engine"]
license = "MIT"
name = "chipmunk-sys"
repository = "https://github.com/nullcatalyst/chipmunk-rs"
version = "0.1.0"

[lib]
name = "chipmunk_sys"

[dependencies]
libc = "^0.2"

[build-dependencies.bindgen]
optional = true
version = "^0.53"

[build-dependencies.vcpkg]
optional = true
version = "^0.2.10"

[features]
default = []
static-link = []
use-bindgen = ["bindgen"]
use-vcpkg = ["vcpkg"]
